fix layout issue

--- a/src/home.css
+++ b/src/home.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 70vh;
+  height: 70vmin;
   background: linear-gradient(var(--bgdeg), #2b5876, #4e4376);
   padding: 0 2rem;
   user-select: none;
